--- a/views/header.html
+++ b/views/header.html
@@ -13,14 +13,14 @@
 							<span>Nossos Produtos</span>
 						</a>
 					    <ul class="dropdown-menu">
-							<li><a href="/" class="title">Linha Eletromec</a></li>
+							<li><a href="/" class="title" style="color: white;">Linha Eletromec</a></li>
 							<li><a href="#fusivel_cartucho">Fusível Cartucho</a></li>
 							<li><a href="#fusivel_nh">Fusível NH</a></li>
 							<li><a href="#elcm">Linha ELCM</a></li>
 							<li><a href="#eldr">Linha ELDR</a></li>
 							<li><a href="#elmd">Linha ELMD</a></li>
 							<li><a href="#elps">Linha ELPS</a></li>
-						  	<li><a class="secundary-title" href="http://www.eaton.com.br/EatonBR/ProductsSolutions/index.htm" target="_blank">Conheça todos os nossos produtos</a></li>
+						  	<li><a class="secundary-title" href="http://www.eaton.com.br/EatonBR/ProductsSolutions/index.htm" target="_blank" style="color: #0067cd;">Conheça todos os nossos produtos</a></li>
 					    </ul>
 				  	</div>
 					<div class="divider"></div>
