--- a/views/elcm/view.html
+++ b/views/elcm/view.html
@@ -1011,7 +1011,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 text-right">
-                <a class="btn-primary" href="#">Baixar em PDF</a>
+                <a class="btn-primary" href="../../pdf/download/Eletromec - Linha ELCM.pdf" target="_blank">Baixar em PDF</a>
             </div>
         </div>
     </div>
