--- a/views/header.html
+++ b/views/header.html
@@ -29,6 +29,12 @@
 							<span>Nossa Empresa</span>
 						</a>
 				  	</div>
+					<div class="divider"></div>
+					<div class="dropdown" style="float: left;">
+				    	<a class="dropdown-button" href="http://www.c123.com.br/eaton/cadini.asp" target="_blank">
+							<span>Eaton Fácil</span>
+						</a>
+				  	</div>
 				</div>
 			</div>
 		</div>
