--- a/views/main.html
+++ b/views/main.html
@@ -2,7 +2,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				<img src="img/banners/1.jpg" alt="Banner" width="100%" id="banner" />
+				<a href="#" id="mailto-banner">
+					<img src="img/banners/1.jpg" alt="Banner" width="100%" id="banner" />
+				</a>
 			</div>
 		</div>
 		<div class="row">
@@ -22,6 +24,7 @@
 						<li data-banner="3"></li>
 						<li data-banner="4"></li>
 						<li data-banner="5"></li>
+						<li data-banner="6"></li>
 					</ul>
 				</div>
 			</div>
