--- a/views/eldr/view.html
+++ b/views/eldr/view.html
@@ -374,7 +374,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 text-right">
-                <a class="btn-primary" href="#">Baixar em PDF</a>
+                <a class="btn-primary" href="../../pdf/download/Eletromec - Linha ELDR.pdf" target="_blank">Baixar em PDF</a>
             </div>
         </div>
     </div>
