--- a/views/elps/view.html
+++ b/views/elps/view.html
@@ -187,7 +187,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 text-right">
-                <a class="btn-primary" href="#">Baixar em PDF</a>
+                <a class="btn-primary" href="../../pdf/download/Eletromec - Linha ELPS.pdf" target="_blank">Baixar em PDF</a>
             </div>
         </div>
     </div>
