--- a/views/fusivel_cartucho/view.html
+++ b/views/fusivel_cartucho/view.html
@@ -1085,7 +1085,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 text-right">
-                <a class="btn-primary" href="#">Baixar em PDF</a>
+                <a class="btn-primary" href="../../pdf/download/Eletromec - Fusíveis Cartucho.pdf" target="_blank">Baixar em PDF</a>
             </div>
         </div>
     </div>
